# MLIR-Tutorial

./: .gitignore  CMakeLists.txt  README copy.md  README.md
toy_mod/: CMakeLists.txt
toy_mod/src/Ch6/: base.mlir  codegen.toy  debug.py  test.mlir  toyc-ch6
toy_mod/src/Ch7/: debug.py  toyc-ch7
toy_mod/toy/: CMakeLists.txt
toy_mod/toy/Ch6/: toyc.cpp
toy_mod/toy/Ch6/include/toy/: AST.h  Lexer.h  Ops.td  Parser.h
toy_mod/toy/Ch6/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  ToyCombine.cpp  ToyCombine.td
toy_mod/toy/Ch6/parser/: AST.cpp
toy_original/: CMakeLists.txt
toy_original/src/Ch1/: toy.ast
toy_original/src/Ch2/: toy.mlir
toy_original/src/Ch6/: fulllowering.mlir  llvm.ll
toy_original/toy/: CMakeLists.txt
toy_original/toy/Ch2/include/toy/: Ops.cpp
